iommu: move vfio_{map,unmap}_vaddr into iommu/dma
Move the backend independent mapping functions into iommu/dma.

Signed-off-by: Klaus Jensen <k.jensen@samsung.com>

--- a/include/vfn/meson.build
+++ b/include/vfn/meson.build
@@ -3,6 +3,7 @@ vfn_headers = files([
   'pci.h',
   'support.h',
   'trace.h',
+  'iommu.h',
   'vfio.h',
 ])
 
@@ -14,4 +15,5 @@ subdir('support')
 subdir('nvme')
 subdir('pci')
 subdir('trace')
+subdir('iommu')
 subdir('vfio')
