iommu: always enable the vfio backend
Even if we have a kernel with iommufd vfio features enabled, the kernel
may not be configured for modern iommufd (i.e., no device cdevs).

In that case we want to fall back to legacy vfio.

Signed-off-by: Klaus Jensen <k.jensen@samsung.com>

--- a/src/iommu/meson.build
+++ b/src/iommu/meson.build
@@ -1,11 +1,11 @@
 iommu_sources = files(
+  'context.c',
   'dma.c',
+  'vfio.c',
 )
 
 if config_host.get('HAVE_VFIO_DEVICE_BIND_IOMMUFD', false)
   iommu_sources += files('iommufd.c',)
-else
-  iommu_sources += files('vfio.c')
 endif
 
 vfn_sources += iommu_sources
