github: run device tests for iommufd
Switch to Fedora on our custom VM and run tests on both 38 (for now) and
rawhide. Using rawhide makes sure we have the iommufd headers. We should
be able to get rid of rawhide from Fedora 40.

Signed-off-by: Klaus Jensen <k.jensen@samsung.com>

--- a/.github/vmconfig/nvme.conf
+++ b/.github/vmconfig/nvme.conf
@@ -15,17 +15,21 @@
 #                            default: "tcp::2222-:22")
 #
 
-: "${GUEST_DISPLAY:="0"}"
-: "${GUEST_VIOMMU:="1"}"
-: "${GUEST_CPU:="host"}"
-: "${GUEST_SMP:="1"}"
-: "${GUEST_MEMORY:="1G"}"
-: "${GUEST_NET_USER_HOSTFWDS:="tcp::${GUEST_SSH_PORT}-:22"}"
-: "${GUEST_BOOT_BASE:="img/base.qcow2"}"
-: "${GUEST_BOOT:="$GUEST_BOOT_BASE"}"
+GUEST_DISPLAY="0"
+GUEST_VIOMMU="1"
+GUEST_CPU="host"
+GUEST_SMP="1"
+GUEST_MEMORY="1G"
+GUEST_NET_USER_HOSTFWDS="tcp::${GUEST_SSH_PORT}-:22"
+GUEST_KERNEL_CONSOLE="ttyS0,115200"
+GUEST_KERNEL_IMAGE="arch/x86_64/boot/bzImage"
+GUEST_KERNEL_BOOTDEV="/dev/vda5"
+GUEST_KERNEL_APPEND_EXTRA="ro rootflags=subvol=root net.ifnames=0"
 
-_setup_q35_base() {
-  QEMU_PARAMS+=("-nodefaults")
+_setup_nvme() {
+  local default_nvme_params="logical_block_size=4096,physical_block_size=4096"
+
+  QEMU_PARAMS+=("-nodefaults" "-snapshot")
 
   if [[ $GUEST_DISPLAY -eq 0 ]]; then
     QEMU_PARAMS+=("-display" "none")
@@ -56,4 +60,11 @@ _setup_q35_base() {
     --format "qcow2" \
     --interface "virtio" \
     --discard
+
+  QEMU_PARAMS+=("-drive" "id=null,if=none,file=null-co://,file.read-zeroes=on,format=raw")
+
+  # nvme controller
+  qemu_nvme_add_ctrl "nvme0" \
+    --serial "deadbeef" \
+    --extra "drive=null,$default_nvme_params"
 }
