tools/vfntool: do not link with libvfn
Fully linking vfntool with libvfn causes libvfn's various constructors
to run, which for one, will, if enabled in the build, cause it to
complain about iommufd being broken if no device has been bound to
vfio-pci yet.

Since vfntool only depend on some support sources and the pci/util parts
of libvfn, just build against those compilation units instead and drop
the full linkage.

Signed-off-by: Klaus Jensen <k.jensen@samsung.com>

--- a/tools/vfntool/meson.build
+++ b/tools/vfntool/meson.build
@@ -1,5 +1,11 @@
-executable('vfntool', [ccan_config_h, 'vfntool.c'],
-  link_with: [ccan_lib, vfn_lib],
+vfntool_deps = [
+  ccan_config_h,
+  support_sources,
+  pci_sources,
+]
+
+executable('vfntool', [vfntool_deps, 'vfntool.c'],
+  link_with: [ccan_lib],
   include_directories: [ccan_inc, vfn_inc],
   install: true,
 )
